# whip-docs

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  generate_md_files.py  index.html  package-lock.json  package.json  script.js  tsconfig.json  vite.config.ts  vulkan_tree.json
bot-docs/: architecture.md  modules.md
docs/adr/: ADR-001-tauri-rust-analyzer-graph-contracts.md
docs/plans/3d-semantic-graph-v0/: file-level-relations-plan.md  implementation-log.md  selection-index-plan.md
docs/refactors/2026-04-26-whip-docs-tauri-rust-analyzer-refactor/: final-plan.md
rust-doc-tool/: Cargo.toml
rust-doc-tool/output/: module_graph.json
rust-doc-tool/src/: analyzer.rs  cli.rs  config.rs  main.rs
scripts/graphs/: module_dependency_graph.js
scripts/lists/: graph_interaction_tree.js  tree.js
scripts/ui/: code-folding-logic.js  code-viewer.js  column-resizer.js  commit-banner.js  commit-viewer-header.js  header-loader.js  integrated-code-viewer.js
src/: App.svelte  README.md  main.ts  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/3dmodels/: 3dobjects.blend  file.mtl
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  app_lifecycle.rs  app_setup.rs  main.rs
src-tauri/src/analyzer/: README.md  extraction.rs  mod.rs  rust_relations.rs
src-tauri/src/commands/: README.md  mod.rs
src-tauri/src/config/: README.md  mod.rs
src-tauri/src/graph/: README.md  mod.rs  relations.rs
src-tauri/src/source/: README.md  mod.rs
src/backends/: README.md  TauriArchitectureBackend.test.ts  TauriArchitectureBackend.ts
src/lib/: README.md
src/lib/api/: README.md  index.ts
src/lib/components/: README.md
src/lib/graph-v0/: README.md  ThreeDirectoryGraphScene.ts  adapters.test.ts  adapters.ts  constants.ts  edgeGeometry.test.ts  (+17 more)
utilities/: prompt_tool.sh
utilities/prompts/: generate_documentation.md
web-pages/: module-graph.html  shared-styles.css  vulkan-engine.html  vulkan-overview.html
web-pages/components/: code-viewer.css  code-viewer.html  commit-banner.css  commit-banner.html  commit-viewer-header.css  commit-viewer-header.html  integrated-code-viewer.css  integrated-code-viewer.html  main-header.html
whip-docs/descriptions/: Advanced Features.md  Attachments.md  Bind Descriptor Sets.md  Bind Pipeline.md  Buffers.md  Color Attachment.md  Color Blending.md  Command Buffers.md  Command Pools.md  Compute Shaders.md  Debug Utilities Instance Functions.md  Debug Utilities.md  Dependencies.md  Descriptor Pools.md  Descriptor Set Layouts.md  Descriptor Sets.md  Device Extensions.md  Device Features.md  Draw Commands.md  Dynamic Rendering.md  Dynamic State.md  Events.md  Fences.md  Fragment Shader.md  Framebuffers.md  Graphics Queue.md  Graphics State.md  Image Layout Transitions.md  Images.md  Index Buffer.md  Instance Extensions.md  Instance.md  Logical Device.md  Memory Barriers.md  Memory Management.md  Memory Pools.md  Multisampling.md  Physical Devices.md  Pipeline Barriers.md  Pipeline Cache.md  (+37 more)
whip-docs/trees/: vulkan_2d_rendering.json
(+11 files in other folders)
