[workspace]
resolver = "2"
members = ["src-tauri"]
default-members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util"] }
log = "0.4"
cargo_metadata = "0.19"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
