[package]
name = "rust-doc-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] } # For CLI argument parsing
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0"                               # For JSON handling
dialoguer = "0.11"                               # For interactive prompts
thiserror = "1.0"                                # For custom error types
anyhow = "1.0"                                   # For easy error handling in main
directories = "5.0"                              # Optional: For finding standard config dirs (though we use relative paths here)
shellexpand = "3.1"                              # For expanding ~ in paths
log = "0.4"                                      # Logging facade
env_logger = "0.11"                              # Logging implementation
std_prelude = "0.2"                              # Common std imports
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "parsing", "visit"] } 